# manga_collec_scan

./: .gitignore  bt.py  event.py  images.py  key.py  kivi.py  main.py  main.qml  main_lumo.py  main_test.py  pyproject.toml  qml.py
app/: const.py
app/IHM/components/: image_widget.py
app/IHM/delegates/: size_delegate_combo_box_publisher.py
app/IHM/pages/collection/: collection_page.py  collection_ui_page.py
app/IHM/pages/home/: home_page.py  home_ui_page.py
app/IHM/pages/news/: news_page.py  news_ui_page.py
app/IHM/pages/window/: main_windows.py  ui_main_window.py
app/IHM/utils/: controler_util.py  image_download_thread.py
app/IHM/widgets/bar_status/: bar_status.py  ui_bar_status.py
app/IHM/widgets/info_collection/: info_collection.py  ui_info_collection.py
app/IHM/widgets/item_news/: item_news_ui_widget.py  item_news_widget.py
app/IHM/widgets/left_menu/: left_menu.py  ui_left_menu.py
app/IHM/widgets/list_view_news/: list_view_news.py  ui_list_view_news.py
app/IHM/widgets/menu/: lectureitemcontextmenu.py  menu_volume_item.py
app/IHM/widgets/news_header/: news_header.py  ui_news_header.py
app/IHM/widgets/tab_collection/: tab_collection.py  (+1 more)
app/lib/: code_barre_scan.py  container.py  controller.py  interface_page.py  interface_widget.py  route.py  router.py
app/lib/window/: main_windows.py  ui_main_window.py
app/models/: publisher.py  user.py
app/services/mangacollec/: __init__.py
app/widgets/bar_status/: bar_status.py  ui_bar_status.py
app/widgets/left_menu/: left_menu.py  ui_left_menu.py
documents/: codebare.md
(+2 files in other folders)
